--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-  <script src=”https://maps.googleapis.com/maps/api/js?key=AIzaSyCCGYJ0oQ6KBdIAiLn6gUUI8K00Vx__Hpc”></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCGYJ0oQ6KBdIAiLn6gUUI8K00Vx__Hpc"></script>
 </body>
 
 </html>
